# halla_molpol_sim

./: .gitignore  AGENTS.md  CLASSES.md  CMakeLists.txt  GetG3Kin.C  MolPol.cc  MolPolProbeBField.cc  README  README.md  ToDo.txt  levchukMomentaBulkIron.tab  lilly_map_3.0kG_reducedPrecision.table  molmc10.f  variables.md  variables.txt
.cursor/rules/: code-quality.mdc  cpp-style.mdc  file-organization.mdc  geant4-conventions.mdc  session-rules.mdc
include/: MolPolDetector.hh  MolPolDetectorConstruction.hh  MolPolDetectorHit.hh  MolPolDipole.hh  MolPolEMField.hh  MolPolEMFieldMessenger.hh  MolPolEMFieldSetup.hh  MolPolEvent.hh  MolPolEventAction.hh  MolPolIO.hh  MolPolMessenger.hh  MolPolPrimaryGeneratorAction.hh  MolPolQuad.hh  MolPolRunAction.hh  MolPolSolenoid.hh  MolPolSteppingAction.hh  MolPolTOSCAField.hh  MolPoltypes.hh
macros/: batchrun.mac  gui.mac  handler.sh  merger.sh  parameterSetup2pt2GeV.mac  parameterSetup5GeV.mac  runexample.mac  runexample_gems.mac  runexample_sng.mac  runexample_unified.mac  runscript.sh  vis.mac
scripts/: geometry.py
src/: MolPolDetector.cc  MolPolDetectorConstruction.cc  MolPolDetectorHit.cc  MolPolDetectorHit.hh  MolPolDipole.cc  MolPolEMField.cc  MolPolEMFieldMessenger.cc  MolPolEMFieldSetup.cc  MolPolEvent.cc  MolPolEventAction.cc  MolPolIO.cc  MolPolIO.cc.save  MolPolIO.hh  MolPolMessenger.cc  MolPolMessenger.cc.save  MolPolPrimaryGeneratorAction.cc  MolPolPrimaryGeneratorAction.cc.save  MolPolPrimaryGeneratorAction.cc.save.1  MolPolPrimaryGeneratorAction.cc.save.2  MolPolQuad.cc  MolPolRunAction.cc  MolPolSolenoid.cc  MolPolSteppingAction.cc  MolPolTOSCAField.cc  dipolert2.f  levchukMomentaBulkIron.csv  remollMultScatt.cc  rename.pl
vis/: Qt.mac  vis.mac
